2001-06-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-expire-nov-databases): Removed.
	(nnshimbun-request-expire-articles): Simplified; refer to the
	shimbun's default expiration days.

2001-06-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `xml-node-children' for XEmacsen and old FSF
	Emacsen.

2001-06-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Prefer the
	group parameter `expiry-wait' when expiring a closed group.

2001-06-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-article-1): Replace a date
	string in `gnus-newsgroup-data' based on the newly retrieved
	article.

2001-06-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Fix
	inhibiting the expiring.

2001-06-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-expire-nov-databases): New command.
	(nnshimbun-request-expire-articles): New function.
	(nnshimbun-keep-unparsable-dated-articles): New variable.
	(nnshimbun-keep-last-article): New variable.
	(nnshimbun-insert-nov): Rewrite using `nnshimbun-string-or'.
	(nnshimbun-string-or): New macro.
	(nnshimbun-tmp-string): New internal variable.
	(TopLevel): Require `message' for `message-make-date'.

2001-05-30  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (find-cl-run-time-functions): Remove a
	useless non-global var; scroll the output window automatically.

2001-05-31  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-header-xref): Removed.
	(nnshimbun-check-header): Removed.
	(nnshimbun-make-shimbun-header): Don't call
	`nnshimbun-header-xref'.
	(nnshimbun-request-group): Simplified.
	(nnshimbun-request-article-1): Call `nnshimbun-replace-nov-entry'
	instead of `nnshimbun-check-header'.
	(nnshimbun-insert-nov): New function.
	(nnshimbun-generate-nov-database): Call `nnshimbun-insert-nov'
	instead of `nnheader-insert-nov'.